fix issue background projects section on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -765,13 +765,13 @@ nav button {
     content: " ";
     position: absolute;
     left: 0;
-    /* top: -50%; */
+    top: 0;
     z-index: -1;
     background-image: url(../css/cyber-bg-mb.webp);
     opacity: 0.7;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     width: 100%;
     height: 100%;
@@ -786,6 +786,8 @@ nav button {
 @media (min-width: 576px) {
     #container__projects::before {
         background-image: url(../css/cyber-bg.webp);
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 
